--- a/equipo1A.htm
+++ b/equipo1A.htm
@@ -1,2 +1,11 @@
-archivo 2
-Rama equipo1
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <a href="equipo3.html">equipo3</a>
+</body>
+</html>
