--- a/equipo2A.htm
+++ b/equipo2A.htm
@@ -1,2 +1,11 @@
-archivo 2A
-equipo 2
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
